@@ -336,6 +336,7 @@ const
                           = $00100000; // doesn't stop timer while Attacking gear msg is set and inf. attack mode is on
     ammoprop_ForceTurnEnd = $00200000; // always ends turn after usage, ignoring inf. attack
     ammoprop_NoTargetAfter= $00400000; // disable target selection after attack
+    ammoprop_NoWrapTarget = $00800000; // allow to select target beyond wrap world edge limits
     ammoprop_NoRoundEnd   = $10000000; // ammo doesn't end turn
 
     AMMO_INFINITE = 100;               // internal representation of infinite ammo count
