@@ -13,6 +13,7 @@
  + Don't show crate spawn message for initial crates in missions
  * Use player-chosen team identity in campaigns and singleplayer missions
  * Fix last 2 characters in demo chat being missing
+ * Fix homing bee flying weird if passing wrap world edge or target was placed beyond it
  * King Mode: Fix team sometimes not being killed properly if king drowned
  * King Mode: Kill resurrected minions if king is not alive
  * Fix poison damage not working in first round
